Bugfix - Searchbar/button misalignment

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -4,7 +4,7 @@
   background-image: url("https://www.transparenttextures.com/patterns/retro-intro.png");
   color: #FFFFFF;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   position: fixed;
   z-index: 999;
   top: 0;
@@ -16,8 +16,8 @@
   background-color: #80b69c;
 }
 
-.form-inline.form-inline-active {
-  background:#80b69c !important;
+.search-bar {
+  display: flex;
 }
 
 .navbar-brand {
